--- a/templates/rewards.html
+++ b/templates/rewards.html
@@ -8,6 +8,17 @@
 <body>
     <h1>Rewards</h1>
 
+    <!-- Display flash messages -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    <ul>
+        {% for category, message in messages %}
+        <li class="{{ category }}">{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
+
     <h3>Your Points: {{ user['points'] }}</h3>
 
     <ul>
@@ -18,8 +29,8 @@
             <form method="POST">
                 <input type="hidden" name="reward_id" value="{{ reward['id'] }}">
                 <button type="submit" {% if user['points'] < reward['points'] %} disabled {% endif %}>
-                        {% if user['points'] < reward['points'] %} Not Enough Points {% else %} Redeem {% endif %}
-                    </button>
+                    {% if user['points'] < reward['points'] %} Not Enough Points {% else %} Redeem {% endif %}
+                </button>
             </form>
         </li>
         {% endfor %}
